/*
Dear Programmers,

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*                                                 *
*	This file belongs to Kevin Veros Hamonangan   *
*	and	Fandi Fladimir Dachi and is a part of     *
*	our	last project as the student of Del        *
*	Institute of Technology, Sitoluama.           *
*	Please contact us via Instagram:              *
*	sleepingnext and fandi_dachi                  *
*	before copying this file.                     *
*	Thank you, buddy. ðŸ˜Š                          *
*                                                 *
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*/

syntax = "proto3";

package com.ta04.srv.user;

message User {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string username = 4;
    int32 password = 5;
    int32 prime_number = 6;
    int32 generator_value = 7;
    string email_address = 8;
    string phone_number = 9;
    string date_of_birth = 10;
    string address = 11;
    string role = 12;
    string status = 13;
}

message GetAllUsersRequest {
    string query = 1;
    string role = 2;
    string status = 3;
}

message GetOneUserRequest {
    int32 id = 1;
    string username = 2;
    bool with_credentials = 3;
}

message Response {
    repeated User users = 1;
    User user = 2;
    Error error = 3;
}

message Error {
    int32 code = 1;
    string message = 2;
}

service UserService {
    rpc GetAllUsers (GetAllUsersRequest) returns (Response) {
    }

    rpc GetOneUser (GetOneUserRequest) returns (Response) {
    }

    rpc CreateOneUser (User) returns (Response) {
    }

    rpc UpdateOneUser (User) returns (Response) {
    }
}